syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "via.sdj3.protobuf.users"; //Important!!! Put packages (e.g. ".users")!
option java_outer_classname = "UsersProto";

service UsersService {
  rpc Update (UpdateRequest) returns (UpdateResponse); //Request returns response :D
  rpc Add (AddRequest) returns (AddResponse);
  rpc GetByEmail (GetByEmailRequest) returns (GetByEmailResponse);
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
}

message GrpcUser { //Can be considered like a class/object? but not really, it's like a response with many attributes
  int32 id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string password = 5;
  string address = 6;
  string city = 7;
  int32 postalCode = 8;
  string country = 9;
  bool isSeller = 10;
  bool isAdmin = 11;
  bool isAuthorizedSeller = 12;
}

message GetByEmailRequest {
  string email = 1; //Parameter sent from client
}

message GetByEmailResponse {
  GrpcUser user = 1; //Grpc Server answer
}

message GetByIdRequest {
  int32 id = 1;
}

message GetByIdResponse {
  GrpcUser user = 1;
}

message AddRequest {
  GrpcUser user = 1;
}

message AddResponse {
  string result = 1;
}

message UpdateRequest {
  GrpcUser user = 1;
}

message UpdateResponse {
  string result = 1;
}
